--- a/frontend/Docker/Dockerfile.dev
+++ b/frontend/Docker/Dockerfile.dev
@@ -6,7 +6,7 @@ FROM node:16-alpine
 ### --------------------------------------- ###
 ### What needs to happen to build the image ###
 ### --------------------------------------- ###
-WORKDIR /usr/apps/visits
+WORKDIR /usr/apps/frontend
 
 # Copy the package.json file so dependecies can be installed
 COPY ./package.json ./
@@ -20,4 +20,4 @@ COPY ./ ./
 ### ------------------------------------------------ ###
 ### Command to be executed when the container starts ###
 ### ------------------------------------------------ ###
-CMD ["npm", "run", "start"]
+CMD ["npm", "start"]
