--- a/frontend/Docker/Dockerfile.dev
+++ b/frontend/Docker/Dockerfile.dev
@@ -20,4 +20,4 @@ COPY ./ ./
 ### ------------------------------------------------ ###
 ### Command to be executed when the container starts ###
 ### ------------------------------------------------ ###
-CMD ["npm", "start"]
+CMD ["npm", "run", "start"]
